2005-07-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_app_delete), (cb_change_current_page),
	(cb_timeout):
	* src/load-graph.c: (load_graph_update), (load_graph_destroy),
	(load_graph_new), (load_graph_start), (load_graph_change_speed):
	* src/memmaps.c: (close_memmaps_dialog), (create_memmapsdata),
	(create_single_memmaps_dialog):
	* src/openfiles.c: (close_openfiles_dialog),
	(create_single_openfiles_dialog):
	* src/procactions.c: (kill_process):
	* src/procman.c: (timeouts_changed_cb), (procman_data_new):
	* src/procman.h:

	gtk_timeout_add/gtk_timeout_remove -> g_timeout_add/g_source_remove.

2005-07-09  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_app_delete), (cb_change_current_page),
	(cb_update_disks), (cb_timeout):
	* src/interface.c: (create_disk_view), (create_sys_view):
	* src/load-graph.c: (load_graph_draw), (get_load), (get_memory),
	(get_net), (load_graph_update), (load_graph_unalloc),
	(load_graph_alloc), (load_graph_destroy), (load_graph_new),
	(load_graph_start), (load_graph_stop), (load_graph_change_speed),
	(load_graph_get_colors), (load_graph_reset_colors),
	(load_graph_get_labels), (load_graph_get_widget):
	* src/load-graph.h:
	* src/procman.c: (timeouts_changed_cb), (color_changed_cb):
	* src/procman.h:

	Big rework. Closes #309840.

	LoadGraph definition is private.
	Start timeouts only when needed (used to start every timeout on
	startup).

2005-07-09  Benoît Dejean  <TazForEver@dlfp.org>

	* src/load-graph.c: (load_graph_configure), (load_graph_destroy):
	Little cleanup. Fixed callbacks' prototype. Removed never reached
	statements.

2005-07-09  Benoît Dejean  <TazForEver@dlfp.org>

	* src/ChangeLog: Merged into this ChangeLog.

2005-07-08  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procactions.c: (kill_single_process):
	* src/procdialogs.c: (kill_dialog_button_pressed),
	(procdialog_create_kill_dialog), (procdialog_create_renice_dialog):
	* src/procdialogs.h:
	* src/procman.h: Fixed process kill.