@@ -1,3 +1,12 @@
+2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/callbacks.c: (cb_kill_sigstop), (cb_kill_sigcont):
+	* src/callbacks.h:
+	* src/interface.c: (update_sensitivity): 
+	
+	Provide controls to SIGSTOP and SIGCONT a process.
+	Closes #147010.
+
 2005-07-10  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/callbacks.c: (cb_app_delete), (cb_change_current_page),
